--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="_20dp">20dp</dimen>
     <dimen name="_20sp">20sp</dimen>
     <dimen name="_35dp">35dp</dimen>
+    <dimen name="_50dp">50dp</dimen>
     <dimen name="_55dp">55dp</dimen>
     <dimen name="_350dp">350dp</dimen>
 </resources>
